# flynet

./: .gitignore  pyproject.toml  setup.py
flynet/: inference.py  inference_b4_oop.py  test.py  train.ipynb  train.py  train_iris.py
flynet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flynet/configs/: training_config.json
flynet/models/20250202_171238/: model_epoch_100.pth  model_epoch_200.pth  model_epoch_400.pth  model_epoch_500.pth
flynet/models/20250202_171238_V1/: best_model.pth  model_epoch_300.pth
flynet/models/20250204_120907/: best_model.pth  model_epoch_400.pth  model_epoch_600.pth
flynet/models/20250204_120907_V2/: model_epoch_100.pth  model_epoch_200.pth  model_epoch_300.pth  model_epoch_500.pth
flynet/models/20250205_145717_V3/: best_model.pth  model_epoch_100.pth  model_epoch_200.pth  model_epoch_300.pth  model_epoch_400.pth  model_epoch_500.pth
flynet/models/20250206_101503_V5/: best_model.pth  model_epoch_100.pth  model_epoch_200.pth  model_epoch_300.pth  model_epoch_400.pth  model_epoch_500.pth
flynet/models/20250219_150503_V8/: model_epoch_100.pth
flynet/models/20250219_153636_V7/: best_model.pth  model_epoch_100.pth  model_epoch_300.pth  model_epoch_400.pth
flynet/models/20250219_153636_V8/: best_model.pth  model_epoch_200.pth  model_epoch_300.pth  model_epoch_400.pth  model_epoch_500.pth
flynet/models/20250331_003009_V1Ph2_SS1H64L2/: model_epoch_200.pth  model_epoch_300.pth  model_epoch_400.pth  model_epoch_500.pth
flynet/models/20250331_003009_V9_SS1H64L2/: model_epoch_100.pth
flynet/utils/: utils.py
(+6029 files in other folders)
